Added comments to Notebook

--- a/nhs-prescription-analysis.ipynb
+++ b/nhs-prescription-analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,18 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load Prescription level data\n",
     "prescription_datafile = \"extracted/2018_10_Oct/T201810PDPI BNFT.CSV\"\n",
     "prescription_df = pd.read_csv(prescription_datafile)\n",
+    "# Clean up column headers to remove extraneous spaces\n",
     "prescription_df.columns = [col.strip() for col in prescription_df.columns]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -169,13 +171,13 @@
        "4  201810                      "
       ]
      },
-     "execution_count": 176,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prescription_df.head()"
+    "prescription_df.head()    # Display the first 5 rows of data"
    ]
   },
   {
@@ -195,36 +197,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract the components of the BNF Code to:\n",
+    "# bnf - the Chemical formulation\n",
+    "# product - Product code\n",
+    "# strength - Product strength\n",
+    "# generic_code - The code used to refer to the Generic equivalent.\n",
     "prescription_df['bnf'] = prescription_df['BNF CODE'].str.slice(0, 9)\n",
     "prescription_df['product'] = prescription_df['BNF CODE'].str.slice(9, 11)\n",
     "prescription_df['strength'] = prescription_df['BNF CODE'].str.slice(11, 13)\n",
     "prescription_df['generic_code'] = prescription_df['BNF CODE'].str.slice(13, 15)\n",
+    "\n",
+    "# Construct the Generic equivalent BNF Code\n",
     "prescription_df['GENERIC BNF'] = (\n",
     "    prescription_df['bnf'] + 'AA' +\n",
     "    prescription_df['generic_code'] +\n",
     "    prescription_df['generic_code'])\n",
+    "\n",
+    "# Label as generic if the BNF CODE is already the generic version\n",
     "prescription_df['is_generic'] = prescription_df['product'] == 'AA'\n",
+    "\n",
+    "# Calculate the unit cost e.g. per pill cost.\n",
     "prescription_df['unit_cost'] = prescription_df['ACT COST']/prescription_df['QUANTITY']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Created a grouped list, grouped by generic bnf code and if the item is already generic\n",
+    "# and calculate the sum of their quantities and the sum of their costs per Generic code, and per is_generic flag \n",
     "prescriptions_grouped = prescription_df.groupby(['GENERIC BNF', 'is_generic']).sum()[['QUANTITY','ACT COST']]\n",
     "prescriptions_grouped = prescriptions_grouped.reset_index()\n",
+    "\n",
+    "# Recalculate the unit cost e.g. per pill\n",
     "prescriptions_grouped['unit_cost'] = prescriptions_grouped['ACT COST']/prescriptions_grouped['QUANTITY']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -457,24 +474,41 @@
        "9  1.775933e+05  "
       ]
      },
-     "execution_count": 179,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Split the generic and non-generic into seperate Dataframes\n",
     "prescriptions_generics = prescriptions_grouped[prescriptions_grouped['is_generic'] == True].reset_index().set_index('GENERIC BNF')\n",
     "prescriptions_branded = prescriptions_grouped[prescriptions_grouped['is_generic'] == False].reset_index().set_index('GENERIC BNF')\n",
+    "\n",
+    "# Join the generic and none generic lists by GENERIC BNF code with a _g and _b suffix\n",
     "joined_costs = prescriptions_generics.join(prescriptions_branded, lsuffix='_g', rsuffix='_b' )\n",
+    "\n",
+    "# Select only rows where the unit cost of the branded are greater than the unit cost of the generic\n",
     "expensive_b = joined_costs[joined_costs['unit_cost_b'] > joined_costs['unit_cost_g']].reindex()\n",
+    "\n",
+    "# Calculate an excess pricing base on the difference in generic and branded unit cost multiplied by the quantity\n",
+    "# of the branded drug being used.\n",
     "expensive_b['excess'] = (expensive_b['unit_cost_b'] - expensive_b['unit_cost_g']) * expensive_b['QUANTITY_b']\n",
+    "\n",
+    "# Sort by largest excess value, greatest first, and select the first 10 rows.\n",
     "top_ten = expensive_b.sort_values(by=['excess'], ascending=False).head(10).reset_index()\n",
     "top_ten"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Total excess based on replacing all branded with generics where cost effective"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -485,7 +519,7 @@
        "'Total Saving £11347859.902464494'"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,17 +529,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The total for using all measures to use generic instead of branded would come to ~£10 million per month."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a lookup table to convert generic BNF codes to drug names\n",
     "bnf_lookup = prescription_df[['BNF CODE', 'BNF NAME']].copy().drop_duplicates().set_index('BNF CODE')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -625,14 +667,21 @@
        "9                177.593296  "
       ]
      },
-     "execution_count": 182,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Create new column with the drug name\n",
     "top_ten['name'] = top_ten['GENERIC BNF'].map(bnf_lookup.to_dict()['BNF NAME'])\n",
+    "\n",
+    "# Create new summary table with limited columns\n",
     "summary = top_ten[['GENERIC BNF','name','excess']].copy()\n",
+    "\n",
+    "# Calculate total saving for only converting to ten items\n",
+    "# scale saving to £1000s \n",
+    "# Rename columns to be more useful\n",
     "top_ten_savings = summary['excess'].sum()\n",
     "summary['excess'] = summary['excess']/1000\n",
     "summary.rename({\n",
@@ -644,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +702,7 @@
        "'Total monthly savings from using top ten Generics £5,469,671.30'"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,13 +713,6 @@
     "\"Total monthly savings from using top ten Generics £{}\".format(\n",
     "    locale.currency(top_ten_savings, symbol=False, grouping=True))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
